Prove of PageRank Convergence

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <style type="text/css">
     body{
-        font-family: consolas;        
+        font-family: consolas;
         margin-right: 10%;
         margin-left: 10%;
     }
@@ -44,7 +44,7 @@
             <p>My research goal is to develop a method to build a knowledge graph basing on scientifi papers. I'm working with Professor Wenwen and Professor Vincent.</p>
             <p>You can contace me through hjm_dmir@hotmail.com</p>
         </td>
-        
+
     </tr>
     </table>
     <section id="hobby">
@@ -61,10 +61,16 @@
             <li><h3 class="e_head">Postgraduate</h3>
             <p>2015-2018: Computer Science and Technology, School of Computer, GDUT, China</p>
             </li>
-            
+
         </ol>
     </section>
-    <section id="project"></section>
+    <section id="material"><h2 class="section_title">Study Material</h2>
+        <ul>
+            <li>Why PageRank Converges ? <a href="./material/Why_PageRank_Converges.pdf">[PDF]</a> <a href="./material/Why_PageRank_Converges.tex">[LaTex]</a></li>
+
+        </ul>
+
+        </section>
     <footer>
         <p> Jimmy's Home Page 2016-5-15</p>
     </footer>
