Prove of PageRank Convergence

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
         color: orange;
         text-align: center;
     }
+    section{
+        margin-top: 100px;
+    }
     #my_picture{
         width: 250px;
         border: 1px solid green;
