paper notes related to DeepWork

--- a/index.html
+++ b/index.html
@@ -4,11 +4,6 @@
     <title>Jimmy's Home Page</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <style type="text/css">
-    body{
-        font-family: consolas;
-        margin-right: 10%;
-        margin-left: 10%;
-    }
     h1{
         color: orange;
         text-align: center;
@@ -27,14 +22,14 @@
     }
     footer{
         text-align: center;
-        margin-top: 50px;
-        font-style: italic;
+        margin-top: 100px;
     }
     header{
         text-align: center;
         font-size: 15px;
     }
     </style>
+    <link rel="stylesheet" type="text/css" href="/style%20sheet/basic%20style.css">
 </head>
 <body>
     <h1>Jimmy's Home Page</h1>
@@ -45,18 +40,18 @@
         <td id="p_msg">
             <p>I'm a post graduate student at Computer Science and Technilogy, School of Computer Science, Guangdong University of Technology, China.</p>
             <p>My research goal is to develop a method to build a knowledge graph basing on scientifi papers. I'm working with Professor Wenwen and Professor Vincent.</p>
-            <p>You can contace me through hjm_dmir@hotmail.com</p>
+            <p>You can contace me through: hjm_dmir@hotmail.com</p>
         </td>
 
     </tr>
     </table>
     <section id="hobby">
-        <h2 class="section_title">HOBBY</h2>
+        <h2 class="section_title">Hobby</h2>
         <p>I like sports such as tennis, table tennis, badminton, Billiards, volley ball...</p>
         <p>I like reading books, enjoy the time stay alone. I belief that stay alone can make you more closer to yourself, to your heart. In my life, I want to know myself more. Just as the popular saying:"Know yourself"</p>
     </section>
     <section id="education">
-        <h2 class="section_title">EDUCATION</h2>
+        <h2 class="section_title">Education</h2>
         <ul>
             <li><h3 class="e_head">Undergraduate</h3>
             <p>2011-2015: Computer Science and Technology, School of Computer, GDUT, China</p>
@@ -70,12 +65,23 @@
     <section id="material"><h2 class="section_title">Study Material</h2>
         <ul>
             <li>Why PageRank Converges ? <a href="./material/why_pagerank_converges.pdf">[PDF]</a> <a href="./material/why_pagerank_converges.tex">[LaTex]</a></li>
-
+            <li>Word or Vertex Embeddings. <a href="./ADSC_DeepWalk/embeddings.html">[html]</a></li>
+            <li>Semi-Suppervised Embeddings. <a href="./ADSC_DeepWalk/Semi-Supervised Embeddings.html">[html]</a></li>
         </ul>
 
-        </section>
+    </section>
+
+    <section id="papers"><h2 class="section_title">Papers</h2>
+    <ol>
+        <li>...</li>
+        <li>...</li>
+    </ol>
+
+
+    </section>
+
     <footer>
-        <p> Jimmy's Home Page 2016-5-15</p>
+        <p class="author"> Jimmy's Home Page 2016-5-15</p>
     </footer>
 </body>
 </html>
