add: install shadowsocks as client in ubuntu.md

--- a/ADSC_DeepWalk/Semi-Supervised Embeddings.html
+++ b/ADSC_DeepWalk/Semi-Supervised Embeddings.html
@@ -48,7 +48,7 @@
     <h3 class="paper_title">[2012][KDD]: Incorporating Heterogeneous Information for Personalized Tag Recommendation in Social Tagging Systems</h3>
     <p class="author">Wei Feng, Jianyong Wang</p>
     <div class="abstract">
-    <p style="color:red">wait a minute...</p>
+    <p style="color:red">Not yet finished reading...</p>
     </div>
     </section>
 
